# netify

./: .gitignore  Cargo.toml  Makefile  app.ts  readme.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/endpoints/: get_playing_song.rs  get_users_playlists.rs  get_users_profile.rs  mod.rs  toggle_playback.rs
common/: Cargo.toml
common/src/: actions.rs  album.rs  artist.rs  curr_playing.rs  device.rs  episode.rs  image.rs  lib.rs  page.rs  playlist.rs  show.rs  track.rs  user.rs
public/: index.html
spotstuff/: package-lock.json  package.json
spotstuff/authorization_code/: app.js
spotstuff/authorization_code/public/: index.html
src/: main.rs
src/components/: nav.rs
src/pages/: home.rs  profile.rs
yewapp/: Cargo.toml  index.html
yewapp/src/: lib.rs  main.rs  router.rs
yewapp/src/.old/: lib.old
yewapp/src/.old/components/: user.rs
yewapp/src/.old/pages/: callback.rs  home.rs
yewapp/src/components/: login.rs  mod.rs  nav.rs  profile_badge.rs
yewapp/src/components/atom/: button.rs
yewapp/src/components/organisms/: playlist.rs
yewapp/src/hooks/: create_hash.rs  mod.rs  serialize_date_time.rs  use_get_playing_song.rs  use_get_playlists.rs  use_get_profile.rs  use_validate_logged.rs
yewapp/src/pages/: callback.rs  callback.rs.old  home.rs  mod.rs  profile.rs
