[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde_json = "1.0.85"
base64 = "0.13.0"
tower-http = { version = "0.2.0", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
axum-macros = "0.2.3"
rand = "0.8.5"
spotify-types = { path = "../common/" }
