[package]
name = "netify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux-functional = "0.1.0"
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
serde = { version = "1.0.114" }
base64 = "0.13.0"

rand = "0.8.5"
wasm-bindgen = "0.2.80"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.56", features = ["Request", "Window", "UrlSearchParams", "Url" ] }
gloo-console = "0.2.1"
gloo-net = "0.2"
gloo-utils = "0.1.3"
