[package]
name = "netify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux-functional = "0.1.0"
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
serde = { version = "1.0.114" }
serde_json = "1.0"
base64 = "0.13.0"
rand = "0.8.5"
wasm-bindgen = { version = "= 0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.56", features = ["Request", "RequestInit", "Window", "UrlSearchParams", "Url" ] }
gloo-console = "0.2.3"
gloo-net = "0.2"
gloo-utils = "0.1.3"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
timer = "0.2.0"
chrono = { version = "0.4.22", features = [ "serde" ] }
