[package]
name = "netify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"
yewdux = "0.9"
serde = { version = "1.0.114" }
serde_json = "1.0"
base64 = "0.13.0"
rand = "0.8.5"
wasm-bindgen = { version = "= 0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.56", features = ["Request", "RequestInit", "Window", "UrlSearchParams", "Url", "WorkerGlobalScope" ] }
gloo-console = "0.2.3"
gloo-net = "0.2"
gloo-utils = "0.1.3"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
timer = "0.2.0"
chrono = { version = "0.4.22", features = [ "serde" ] }
rspotify-model = {git = "https://github.com/ramsayleung/rspotify/"}